<resources>
    <string name="app_name">exercicios do lucas</string>
    <string name="marcaKZ">KZ</string>

    <!-- result text -->
    <string name="result">Resultado</string>

    <!-- Better String -->
    <string name="punishment">POMANO, ME AJUDA AÍ NÉ VÉI!</string>

    <!-- Text of Buttons -->
    <string name="calculate">Calcular</string>
    <string name="Back">Voltar</string>
    <string name="Concluir">Concluir</string>
    <string name="cleanButton">Limpar</string>
    <string name="incluirButton">Incluir</string>

    <!-- name of Activitys -->
    <string name="exc1">Exercicio 1 (Ex)</string>
    <string name="exc2">Exercicio 2 (Ex)</string>
    <string name="exc3">Exercicio 3 (Ex)</string>
    <string name="exc4">Exercicio 4 (Ex)</string>
    <string name="exc5">Exercicio 5 (Ex)</string>
    <string name="exc6">Exercicio 6 (Ex)</string>
    <string name="exc7">Exercicio 7 (Ex)</string>
    <string name="exc8">Exercicio 8 (Ex)</string>
    <string name="exc9">Exercicio 9 (Ex)</string>
    <string name="exc10">Exercicio 10 (Ex)</string>
    <string name="exc11">Exercicio 11 (Ex)</string>
    <string name="exc12">Exercicio 12 (Ex)</string>
    <string name="exc13">Exercicio 13 (Ex)</string>
    <string name="exc14">Exercicio 14 (Ex)</string>

    <!-- exercise 1 texts -->
    <string name="somar">Soma</string>
    <string name="subitrair">Subitração</string>
    <string name="multiplicar">Multiplicação</string>
    <string name="dividir">Divisão</string>
    <string name="title1">Calculadora Multipla</string>
    <string name="primeiro_numb">Primeiro Numero</string>
    <string name="segundo_numb">Segundo Numero</string>

    <!-- exercise 2 texts -->
    <string name="numbTabu">Numero da Tabuada</string>
    <string name="resultTabu">Resultado da Tabuada</string>
    <string name="title2">Tabuadas</string>

    <!-- exercise 3 texts -->
    <string name="fahrenheit">Resultado em Fahrenheit</string>
    <string name="celsius">Digite graus Celsius</string>
    <string name="title3">Conversor de Graus Celsius em Fahrenheit</string>

    <!-- exercise 4 texts -->
    <string name="Reais">Digite o Valor em Real</string>
    <string name="Dolar">Valor em Dolar</string>
    <string name="title4">Conversor da Moeda Real em Dolar</string>
    <string name="cotaçãoDoDolar">Digite a Cotação do Dolar Atual</string>

    <!-- exercise 5 texts -->
    <string name="polegada">Digite o Valor em Polegadas</string>
    <string name="centimetro">Resultado em Centimetros</string>
    <string name="title5">Conversor de Polegada para Centimetros</string>

    <!-- exercise 6 texts -->
    <string name="title6">Lista de Frutas</string>
    <string name="editfruta1">Digite o nome da 1º fruta</string>
    <string name="editfruta2">Digite o nome da 2º fruta</string>
    <string name="editfruta3">Digite o nome da 3º fruta</string>
    <string name="editfruta4">Digite o nome da 4º fruta</string>
    <string name="editfruta5">Digite o nome da 5º fruta</string>
    <string name="listaDeFrut">Sua Lista de Frutas</string>
    <string name="nPreenchido">Espaço não Preenchido ;-;</string>

    <!-- exercise 7 texts -->
    <string name="title7">Invertendo Palavras</string>
    <string name="editQualquerCoisa">Digite qualquer coisa</string>
    <string name="textInvertido">Palavra Invertida</string>
    <string name="inverter">Inverter</string>

    <!-- exercise 8 texts -->
    <string name="title8">Digite os numeros para descobri se é "IMPAR ou PAR"</string>
    <string name="digitNumber">Digite o numero para incluir na lista:</string>
    <string name="parNumb">Numeros Pares</string>
    <string name="imparNumb">Numeros Impares</string>
    <string name="numbList">Lista de numeros</string>
    <string name="oddOrEven">Impar ou par</string>

    <!-- exercise 9 texts -->
    <string name="title9">Maior, Menor e Média</string>
    <string name="digitFirstNumb">Digite o Primeiro Numero</string>
    <string name="digitSecondNumb">Digite o Segundo Numero</string>
    <string name="digitThirdNumb">Digite o Terceiro Numero</string>
    <string name="digitFourthNumb">Digite o Quarto Numero</string>
    <string name="digitFifthNumb">Digite o Quinto Numero</string>
    <string name="bigger">Maior Numero</string>
    <string name="smaller">Menor Numero</string>
    <string name="mediaNumber">Média</string>
    <string name="missNumber">Favor preencher todos os Numeros</string>
    <string name="bigresult">Resultado do maior numero : %1$s</string>
    <string name="smallresult">Resultado do menor numero : %1$s</string>
    <string name="mediaresult">Resultado da média : %1$s</string>


    <!-- exercise 10 texts -->
    <string name="title10">Lista de Convidados</string>
    <string name="digitNameGuest">Digite o Nome do Convidado</string>
    <string name="bigName">Convidado de Maior Nome</string>
    <string name="missName">Digite Todos Os Nomes!</string>
    <string name="bigNameResult">Convidado de Maior Nome é: %1$s</string>

    <!-- exercise 11 texts -->
    <string name="title11">Palavras com o Impar em Maiusculo</string>
    <string name="digitWord">Digite Qualquer Palavra</string>
    <string name="resultNameText">Resultado da Palavra</string>
    <string name="missWord">Por Favor, Escreva Alguma Palavra</string>

    <!-- exercise 12 texts -->
    <string name="title12">Mais novo, mais velho e idade Média</string>
    <string name="digitAge">Digite a Idade</string>
    <string name="textOldPerson">Mais Velho</string>
    <string name="textNewPerson">Mais Novo</string>
    <string name="textMediumPerson">Média de Idade</string>
    <string name="editName">Digite o nome</string>
    <string name="firstPerson">Primeira pessoa</string>
    <string name="secondPerson">Segunda pessoa</string>
    <string name="thirdPerson">Terceira pessoa</string>
    <string name="fourthPerson">Quarta pessoa</string>
    <string name="fifthPerson">Quinta pessoa</string>
    <string name="incompleted">Por Favor, Preencha todos os dados</string>
    <string name="age">Idade: %1$s</string>
    <string name="name">Nome: </string>
    <string name="name_age_old_placeholders">Mais Velho\nNome : %1$s \nIdade : %2$s</string>
    <string name="name_age_new_placeholders">Mais Novo\nNome : %1$s \nIdade : %2$s</string>
    <string name="average_age_placeholders">Média de Idade : %1$s </string>

    <!-- exercise 13 texts -->
    <string name="title_13">Calcula de IMC</string>
    <string name="digit_height">Digite a altura</string>
    <string name="digit_weight">Digite o peso</string>
    <string name="digit_name">Digite o nome</string>
    <string name="fat">Gordinho</string>
    <string name="name_fat_placeholders"> %1$s está acima do peso, IMC: %2$s</string>
    <string name="name_lean_placeholders">%1$s está abaixo do peso, IMC: %2$s</string>
    <string name="name_ideal_weight_placeholders">%1$s está no peso ideal, IMC: %2$s</string>


    <!-- exercise 14 texts -->
    <string name="title_14">CSM Reajustes</string>
    <string name="digit_valor_wage">Digite o valor do salário</string>
    <string name="miss_valor">Por favor, informe o salário.</string>
    <string name="result_wage">resultado da alteração salarial</string>
    <string name="result_wage_placeholder">Salário antes do reajuste : %1$s\nPercentual de aumento aplicado : %2$s\nValor do aumento : %3$s\nSalario atualizado : %4$s</string>
    <string name="twent_percent">20%</string>
    <string name="fifteen_percent">15%</string>
    <string name="ten_percent">10%</string>
    <string name="five_percent">5%</string>


</resources>