<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExerciseTwelve">

  <TextView
      android:id="@+id/textView4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      android:text="@string/exc12"
      android:textAlignment="center"
      android:textSize="20sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/text_Title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      android:text="@string/title12"
      android:textAlignment="center"
      android:textSize="20sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView4" />

  <EditText
      android:id="@+id/edit_Name1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="8dp"
      android:hint="@string/editName"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView22" />

  <EditText
      android:id="@+id/edit_Name2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="8dp"
      android:hint="@string/editName"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView29" />

  <EditText
      android:id="@+id/edit_Name3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="8dp"
      android:hint="@string/editName"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView30" />

  <EditText
      android:id="@+id/edit_name4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="8dp"
      android:hint="@string/editName"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView31" />

  <EditText
      android:id="@+id/edit_Name5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="8dp"
      android:hint="@string/editName"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView32" />

  <EditText
      android:id="@+id/edit_Age1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:hint="@string/digitAge"
      app:layout_constraintStart_toEndOf="@+id/edit_Name1"
      app:layout_constraintTop_toBottomOf="@+id/textView22" />

  <EditText
      android:id="@+id/edit_Age2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:hint="@string/digitAge"
      app:layout_constraintStart_toEndOf="@+id/edit_Name2"
      app:layout_constraintTop_toBottomOf="@+id/textView29" />

  <EditText
      android:id="@+id/edit_Age3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:hint="@string/digitAge"
      app:layout_constraintStart_toEndOf="@+id/edit_Name3"
      app:layout_constraintTop_toBottomOf="@+id/textView30" />

  <EditText
      android:id="@+id/edit_Age4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:hint="@string/digitAge"
      app:layout_constraintStart_toEndOf="@+id/edit_name4"
      app:layout_constraintTop_toBottomOf="@+id/textView31" />

  <EditText
      android:id="@+id/edit_Age5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:hint="@string/digitAge"
      app:layout_constraintStart_toEndOf="@+id/edit_Name5"
      app:layout_constraintTop_toBottomOf="@+id/textView32" />

  <TextView
      android:id="@+id/textView22"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:text="@string/firstPerson"
      android:textAlignment="center"
      android:textSize="16sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/text_Title" />

  <TextView
      android:id="@+id/textView29"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:text="@string/secondPerson"
      android:textAlignment="center"
      android:textSize="16sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/edit_Name1" />

  <TextView
      android:id="@+id/textView30"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:text="@string/thirdPerson"
      android:textAlignment="center"
      android:textSize="16sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/edit_Name2" />

  <TextView
      android:id="@+id/textView31"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:text="@string/fourthPerson"
      android:textAlignment="center"
      android:textSize="16sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/edit_Name3" />

  <TextView
      android:id="@+id/textView32"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:text="@string/fifthPerson"
      android:textAlignment="center"
      android:textSize="16sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/edit_name4" />

  <Button
      android:id="@+id/back_Button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginBottom="8dp"
      android:text="@string/Back"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/Conclu_Button"
      android:layout_width="170dp"
      android:layout_height="50dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="24dp"
      android:text="@string/Concluir"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/text_Aviso" />

  <Button
      android:id="@+id/clearn_Button"
      android:layout_width="170dp"
      android:layout_height="50dp"
      android:layout_marginStart="24dp"
      android:layout_marginTop="8dp"
      android:text="@string/cleanButton"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/text_Aviso" />

  <TextView
      android:id="@+id/text_New"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:text="@string/textNewPerson"
      android:textAlignment="center"
      android:textSize="16sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/edit_Age5" />

  <TextView
      android:id="@+id/text_Old"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      android:text="@string/textOldPerson"
      android:textAlignment="center"
      android:textSize="16sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/edit_Age5" />

  <TextView
      android:id="@+id/text_Medium"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/textMediumPerson"
      android:textAlignment="center"
      android:textSize="16sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toStartOf="@+id/text_Old"
      app:layout_constraintHorizontal_bias="0.545"
      app:layout_constraintStart_toEndOf="@+id/text_New"
      app:layout_constraintTop_toBottomOf="@+id/edit_Age5" />

  <TextView
      android:id="@+id/text_Aviso"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      android:text="@string/incompleted"
      android:textAlignment="center"
      android:textColor="@color/red"
      android:textSize="20sp"
      android:textStyle="bold"
      android:visibility="gone"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/text_Medium" />
</androidx.constraintlayout.widget.ConstraintLayout>